force-app/main/default/objects/Asset_Intake_Jurisdiction_Relations__c/Asset_Intake_Jurisdiction_Relations__c.object-meta.xml
<CustomObject>
    <label>Asset Intake Jurisdiction Relation</label>
    <nameField>
        <label>Asset Intake Jurisdiction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Intake Jurisdiction Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>