force-app/main/default/objects/Asset_Intake_Jurisdiction_Relations__c/fields/Asset_Intake_Inventor__c.field-meta.xml
<CustomField>
    <fullName>Asset_Intake_Inventor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Intake Inventor</label>
    <referenceTo>Asset_Intake_Inventor__c</referenceTo>
    <relationshipLabel>Asset Intake Jurisdiction Relations</relationshipLabel>
    <relationshipName>Asset_Intake_Jurisdiction_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>