force-app/main/default/objects/Asset_Intake_Jurisdiction_Relations__c/fields/Asset_Intake_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Asset_Intake_Jurisdiction__c</fullName>
    <label>Asset Intake Jurisdiction</label>
    <referenceTo>Asset_Intake_Jurisdiction__c</referenceTo>
    <relationshipLabel>Asset Intake Jurisdiction Relations</relationshipLabel>
    <relationshipName>Asset_Intake_Jurisdiction_Relations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>