force-app/main/default/objects/Asset_Intake_Jurisdiction_Relations__c/fields/Asset_Intake_Personnel__c.field-meta.xml
<CustomField>
    <fullName>Asset_Intake_Personnel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Intake Personnel</label>
    <referenceTo>Asset_Intake_Personnel__c</referenceTo>
    <relationshipLabel>Asset Intake Jurisdiction Relations</relationshipLabel>
    <relationshipName>Asset_Intake_Jurisdiction_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>