force-app/main/default/objects/Asset_Intake_Jurisdiction_Relations__c/fields/InstanceType__c.field-meta.xml
<CustomField>
    <fullName>InstanceType__c</fullName>
    <label>Instance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset_Intake_Inventor__c</fullName>
            </value>
            <value>
                <fullName>Asset_Intake_Applicants__c</fullName>
            </value>
            <value>
                <fullName>Asset_Intake_Personnel__c</fullName>
            </value>
            <value>
                <fullName>Asset_Intake_Class__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>